--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@
 x64/
 [Bb]in/
 [Oo]bj/
-**/obj/*
-**/Debug/*
-**/bin/*
+obj/
+Debug/
+bin/
 # build folder is nowadays used for build scripts and should not be ignored
 #build/
 
